[gd_scene load_steps=4 format=3 uid="uid://byxixsjbsubl1"]

[ext_resource type="Script" path="res://objects/slot.gd" id="1_yp3o2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_auht3"]
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0k1a"]
size = Vector2(32, 32)

[node name="Button" type="MarginContainer"]
custom_minimum_size = Vector2(32, 32)
mouse_filter = 2
script = ExtResource("1_yp3o2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_auht3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_q0k1a")

[connection signal="input_event" from="Area2D" to="." method="_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_mouse_exited"]
